@@ -2,8 +2,11 @@ Revision history for Perl module CPAN::Reporter::Smoker
 
 0.07
 
-    - Added a blank link before progress message to help it stand out as
-      lines of text scroll by on the console
+    - Changed: progress message -- added blank line before to help it stand out
+      as lines of text scroll by on the console; added localtime() timestamp
+      to help users tell how long a test has been running (e.g hung?)
+
+    - Documented: cache purge happens when indices are checked for new distros
 
 0.06 Thu Mar  6 10:12:26 EST 2008
 
